--- a/Databanken/02.md
+++ b/Databanken/02.md
@@ -23,44 +23,44 @@ create table countries (
 ) engine='innodb';
 ```
 
-landen in Europa:
+1. landen in Europa:
 
-```SQL
-SELECT count(*) FROM countries WHERE Continent = "Europe";
-```
+	```SQL
+	SELECT count(*) FROM countries WHERE Continent = "Europe";
+	```
 
-Grootste 10 landen:
+2. Grootste 10 landen:
 
-```SQL
-SELECT Name FROM countries ORDER BY SurfaceArea DESC LIMIT 10;
-```
+	```SQL
+	SELECT Name FROM countries ORDER BY SurfaceArea DESC LIMIT 10;
+	```
 
-Geef in alfabetische volgorde de namen van de landen waarvan de naam begint met ‘Be’.
+3. Geef in alfabetische volgorde de namen van de landen waarvan de naam begint met ‘Be’.
 
-```SQL
-SELECT Name FROM countries WHERE Name LIKE "Be%" ORDER BY Name ASC;
-```
+	```SQL
+	SELECT Name FROM countries WHERE Name LIKE "Be%" ORDER BY Name ASC;
+	```
 
-Hoeveel landen hebben er minder dan 10 miljoen inwoners?
+4. Hoeveel landen hebben er minder dan 10 miljoen inwoners?
 
-```SQL
-SELECT count(*) FROM countries WHERE Population < 10000000;
-```
+	```SQL
+	SELECT count(*) FROM countries WHERE Population < 10000000;
+	```
 
-Hoe groot is het verschil in levensverwachting tussen het land met het hoogste en het land met de laagste levensverwachting?
+5. Hoe groot is het verschil in levensverwachting tussen het land met het hoogste en het land met de laagste levensverwachting?
 
-```SQL
-SELECT MAX(LifeExpectancy)-MIN(LifeExpectancy) FROM countries;
-```
+	```SQL
+	SELECT MAX(LifeExpectancy)-MIN(LifeExpectancy) FROM countries;
+	```
 
-Geef code, naam en aantal inwoners van alle landen - sorteer volgens continent, en per continent aflopend op aantal inwoners.
+6. Geef code, naam en aantal inwoners van alle landen - sorteer volgens continent, en per continent aflopend op aantal inwoners.
 
-```SQL
-SELECT Code, Name, Population FROM countries ORDER BY Continent, Population DESC;
-```
+	```SQL
+	SELECT Code, Name, Population FROM countries ORDER BY Continent, Population DESC;
+	```
 
-Geef alle landen die onafhankelijk geworden zijn in de 18de eeuw.
+7. Geef alle landen die onafhankelijk geworden zijn in de 18de eeuw.
 
-```SQL
-SELECT Name FROM countries WHERE IndepYear LIKE "17%";
-```
+	```SQL
+	SELECT Name FROM countries WHERE IndepYear LIKE "17%";
+	```
