--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -4,6 +4,11 @@ Databases labo 3.
 1. Sorteer de bestellingen aflopend op maand en oplopend op dag.
 
 	```SQL
+	SELECT *
+	FROM artikelen
+	INNER JOIN items ON items.artikel_id=artikelen.artikel_id
+	INNER JOIN bestellingen ON bestellingen.bestelling_id=items.bestelling_id
+	ORDER BY MONTH(datum) DESC, DAY(datum) ASC;
 	```
 
 1. Geef het nummer van alle bestellingen die in de laatste 10 dagen werden besteld, geef telkens ook het aantal dagen verlopen sedert de bestelling – sorteer de bestellingen van meest naar minst recent.
