--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -14,6 +14,10 @@ Databases labo 3.
 1. Geef het nummer van alle bestellingen die in de laatste 10 dagen werden besteld, geef telkens ook het aantal dagen verlopen sedert de bestelling – sorteer de bestellingen van meest naar minst recent.
 
 	```SQL
+	SELECT bestelling_id,
+	DATEDIFF(CURDATE(),datum) AS dagen_verlopen
+	FROM bestellingen
+	HAVING dagen_verlopen <= 10;
 	```
 
 1. Hoeveel bestellingen werden er vorige maand geplaatst?
