--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -17,12 +17,16 @@ Databases labo 3.
 	SELECT bestelling_id,
 	DATEDIFF(CURDATE(),datum) AS dagen_verlopen
 	FROM bestellingen
-	HAVING dagen_verlopen <= 10;
+	HAVING dagen_verlopen <= 10
+	ORDER BY dagen_verlopen ASC;
 	```
 
 1. Hoeveel bestellingen werden er vorige maand geplaatst?
 
 	```SQL
+	SELECT COUNT(bestelling_id)
+	FROM bestellingen
+	WHERE MONTH(datum) = MONTH(CURDATE()) -1;
 	```
 
 1. Welke artikelen werden niet tijdens het weekend geleverd?
