--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -24,7 +24,7 @@ Databases labo 3.
 1. Hoeveel bestellingen werden er vorige maand geplaatst?
 
 	```SQL
-	SELECT COUNT(bestelling_id)
+	SELECT COUNT(bestelling_id) AS aantal
 	FROM bestellingen
 	WHERE MONTH(datum) = MONTH(CURDATE()) -1;
 	```
@@ -32,6 +32,7 @@ Databases labo 3.
 1. Welke artikelen werden niet tijdens het weekend geleverd?
 
 	```SQL
+	SELECT
 	```
 
 1. Welke artikelen moeten nog geleverd worden? Geef zowel de id als de
