--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -32,11 +32,10 @@ Databases labo 3.
 1. Welke artikelen werden niet tijdens het weekend geleverd?
 
 	```SQL
-	SELECT beschr, datum
+	SELECT beschr, tijdstip
 	FROM artikelen
 	INNER JOIN items ON items.artikel_id=artikelen.artikel_id
-	INNER JOIN bestellingen ON bestellingen.bestelling_id=items.bestelling_id
-	WHERE DAYNAME(datum) != "Saturday" OR "Sunday";
+	WHERE DAYNAME(tijdstip) != "Saturday" OR "Sunday";
 	```
 
 1. Welke artikelen moeten nog geleverd worden? Geef zowel de id als de
