--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -32,7 +32,7 @@ Databases labo 3.
 1. Welke artikelen werden niet tijdens het weekend geleverd?
 
 	```SQL
-	SELECT beschr, tijdstip
+	SELECT beschr
 	FROM artikelen
 	INNER JOIN items ON items.artikel_id=artikelen.artikel_id
 	WHERE DAYNAME(tijdstip) != "Saturday" OR "Sunday";
