--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -32,9 +32,8 @@ Databases labo 3.
 1. Welke artikelen werden niet tijdens het weekend geleverd?
 
 	```SQL
-	SELECT beschr
-	FROM artikelen
-	INNER JOIN items ON items.artikel_id=artikelen.artikel_id
+	SELECT artikel_id
+	FROM items
 	WHERE DAYNAME(tijdstip) != "Saturday" OR "Sunday";
 	```
 
