--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -37,14 +37,13 @@ Databases labo 3.
 	WHERE DAYNAME(tijdstip) != "Saturday" OR "Sunday";
 	```
 
-1. Welke artikelen moeten nog geleverd worden? Geef zowel de id als de
+1. Welke artikelen moeten nog geleverd worden? Geef zowel de id als de beschrijving van de nog niet geleverde artikelen.
 
 	```SQL
-	```
-
-1. beschrijving van de nog niet geleverde artikelen.
-
-	```SQL
+	SELECT items.artikel_id, beschr
+	FROM items
+	INNER JOIN artikelen ON items.artikel_id=artikelen.artikel_id
+	WHERE tijdstip IS NULL;
 	```
 
 1. Op welke data heeft Werner Van Belle bestellingen gedaan?
