--- a/Databanken/03.md
+++ b/Databanken/03.md
@@ -49,9 +49,18 @@ Databases labo 3.
 1. Op welke data heeft Werner Van Belle bestellingen gedaan?
 
 	```SQL
+	SELECT datum
+	FROM bestellingen
+	INNER JOIN klanten ON bestellingen.klant_id=klanten.klant_id
+	WHERE (naam = "Van Belle") AND (vnaam = "Werner");
 	```
 
 1. Welke artikelen werden ofwel op dezelfde dag of op de volgende dag geleverd?
 
 	```SQL
+	SELECT artikelen.artikel_id
+	FROM artikelen
+	INNER JOIN items ON items.artikel_id=artikelen.artikel_id
+	INNER JOIN bestellingen ON bestellingen.bestelling_id=items.bestelling_id
+	WHERE DATEDIFF(tijdstip,datum) <= 1;
 	```
