--- a/µControllers/03.md
+++ b/µControllers/03.md
@@ -2,3 +2,38 @@
 4 maart 2015
 
 Computertechnologie 2
+
+Programmaflow
+
+# lussen
+
+```ASM
+lus:
+	iets
+	bra lus
+```
+
+# conditionele sprongen
+
+BNZ= springt terug als zero-flag niet 1 is.
+
+```ASM
+lus:
+	iets
+	bnz lus
+```
+
+## oefening
+
+```ASM
+	movlw 0x41	;'A'
+	movwf teller
+lus:
+	movff teller,LATD
+	call Epuls
+
+	incf teller
+	movf teller,WREG
+	sublw 0x46	;'F'
+	bnz lus
+```
