--- a/µControllers/03.md
+++ b/µControllers/03.md
@@ -15,6 +15,8 @@ lus:
 
 # conditionele sprongen
 
+## bnz
+
 BNZ= springt terug als zero-flag niet 1 is.
 
 ```ASM
@@ -39,3 +41,10 @@ lus:
 	sublw 0x46	;'F'
 	bnz lus
 ```
+
+## andere mogelijkheden
+
+* CPFSEQ: vergelijk en skip als gelijk
+* CPFSGT: vergelijk en skip als groter
+* SPFSLT: vergelijk en skip als kleiner
+* ...
