--- a/µControllers/03.md
+++ b/µControllers/03.md
@@ -48,3 +48,18 @@ lus:
 * CPFSGT: vergelijk en skip als groter
 * SPFSLT: vergelijk en skip als kleiner
 * ...
+
+# if/else
+
+```ASM
+	iets
+	bz als
+	bra anders
+als:
+	iets
+	bra eindeals
+anders:
+	iets
+eindeals:
+	iets
+```
