--- a/Digitale Technieken 1/les/03.md
+++ b/Digitale Technieken 1/les/03.md
@@ -4,8 +4,25 @@ overstrepen: ()
 
 ```
 A B X MINTERM
-0 0   (A).(B)
-0 1   (A).(B)
-1 0   (A).(B)
-1 1   (A).(B)
+0 0 0 (A).(B)
+0 1 1 (A).B
+1 0 1 A.(B)
+1 1 0 A.B
+
+X = A.(B) + (A).B = A (+) B
+
+```
+
+# Product of Sums
+
+```
+A B X MAXTERM
+0 0 0 A+B
+0 1 1 A+(B)
+1 0 1 (A)+B
+1 1 0 (A)+(B)
+
+X = A+(B) \cdot (A)+B
+
+X = \Product{M(0,3)}
 ```
