--- a/Digitale Technieken 1/les/03.md
+++ b/Digitale Technieken 1/les/03.md
@@ -1,28 +1,29 @@
-# Sum of Products
+\subsection{Sum of Products}
 
-overstrepen: ()
-
-```
+\begin{verbatim}
 A B X MINTERM
-0 0 0 (A).(B)
-0 1 1 (A).B
-1 0 1 A.(B)
+0 0 0 \overline{A}.\overline{B}
+0 1 1 \overline{A}.B
+1 0 1 A.\overline{B}
 1 1 0 A.B
 
-X = A.(B) + (A).B = A (+) B
+X = A.\overline{B} + \overline{A}.B = A (+) B
+\end{verbatim}
 
-```
+\subsection{Product of Sums}
 
-# Product of Sums
-
-```
+\begin{verbatim}
 A B X MAXTERM
 0 0 0 A+B
-0 1 1 A+(B)
-1 0 1 (A)+B
-1 1 0 (A)+(B)
+0 1 1 A+\overline{B}
+1 0 1 \overline{A}+B
+1 1 0 \overline{A}+\overline{B}
 
-X = A+(B) \cdot (A)+B
+X = A+\overline{B} \cdot \overline{A}+B
 
-X = \Product{M(0,3)}
-```
+X = \Product{M\overline{0,3}}
+\end{verbatim}
+
+\subsection{Implementatie van logische functies}
+
+$$ X = \overline{A}BC + $$
