--- a/Digitale Technieken 1/les/les.tex
+++ b/Digitale Technieken 1/les/les.tex
@@ -104,13 +104,104 @@ een spanning wordt omgezet naar 0 of 1 (0-5 bv), negatieve logica kan ook (0 is 
 
 \section{Les 2}
 
-bla bla bla
+\subsection{Symbolen}
+
+haakje voor NOT
+
+%%$$\amp = AND$$
+
+$$\le1 = OR$$
+
+$$=1 = XOR$$
+
+$$2k = even$$
+
+\subsection{Oefeningen}
+
+\subsubsection{XOR}
+
+IEC = =1
+
+waarheidstabel:
+
+\begin{verbatim}
+ABC Y
+000 0
+001 1
+010 1
+011 0
+100 1
+101 0
+110 0
+111 0 (in de praktijk: 1 (door te gebruiken van 2 XOR-poorten met 2 ingangen))
+\end{verbatim}
+
+Karnaud-kaart
+
+\begin{verbatim}
+        BC
+    00 01 11 10
+   +--+--+--+--+
+ 0 |0 |1 |0 |1 |
+A  +--+--+--+--+
+ 1 |1 |0 |0 |1 |
+   +--+--+--+--+
+\end{verbatim}
+
+Pulsdiagram:
+
+\begin{verbatim}
+A = _-_-_-_-
+B = __--__--
+C = ____----
+Y = _--_-___
+\end{verbatim}
+
+$$Y=AB+\overline{(AB)(+)C}$$
+
+\begin{verbatim}
+A ----
+      &--------
+B ----   |    |
+         |    -------
+         ---        ≤1\---Y
+           =1--------
+C ----------
+\end{verbatim}
 
 \newpage
 
 \section{Les 3}
 
-bla bla bla
+\subsection{Sum of Products}
+
+\begin{verbatim}
+A B X MINTERM
+0 0 0 \overline{A}.\overline{B}
+0 1 1 \overline{A}.B
+1 0 1 A.\overline{B}
+1 1 0 A.B
+
+X = A.\overline{B} + \overline{A}.B = A (+) B
+\end{verbatim}
+
+\subsection{Product of Sums}
+
+\begin{verbatim}
+A B X MAXTERM
+0 0 0 A+B
+0 1 1 A+\overline{B}
+1 0 1 \overline{A}+B
+1 1 0 \overline{A}+\overline{B}
+
+X = A+\overline{B} \cdot \overline{A}+B
+
+X = \Product{M\overline{0,3}}
+\end{verbatim}
+
+\subsection{Implementatie van logische functies}
+
+$$ X = \overline{A}BC + $$
 
 \newpage
 
