--- a/Digitale Technieken 1/les/les.tex
+++ b/Digitale Technieken 1/les/les.tex
@@ -105,15 +105,15 @@ een spanning wordt omgezet naar 0 of 1 (0-5 bv), negatieve logica kan ook (0 is 
 
 \subsection{Symbolen}
 
-haakje voor NOT
+$haakje voor NOT$
 
-$$\& = AND$$
+$\& = AND$
 
-$$\le1 = OR$$
+$\le1 = OR$
 
-$$=1 = XOR$$
+$=1 = XOR$
 
-$$2k = even$$
+$2k = even$
 
 \subsection{Oefeningen}
 
