--- a/Digitale Technieken 1/les/les.tex
+++ b/Digitale Technieken 1/les/les.tex
@@ -153,9 +153,9 @@ Karnaugh-kaart
 Pulsdiagram:
 
 \begin{tikztimingtable}
-  A   &  LHLHLHLH \\ % ends with edge
-  B   &  LLHHLLHH \\ % starts with edge
-  C   &  LLLLHHHH \\ % ends with edge
+  A   &  LHLHLHLH \\
+  B   &  LLHHLLHH \\
+  C   &  LLLLHHHH \\
   Y   &  LHHLHLLL \\
 \end{tikztimingtable}
 
