--- a/Digitale Technieken 1/les/les.tex
+++ b/Digitale Technieken 1/les/les.tex
@@ -105,7 +105,7 @@ een spanning wordt omgezet naar 0 of 1 (0-5 bv), negatieve logica kan ook (0 is 
 
 \subsection{Symbolen}
 
-$haakje voor NOT$
+haakje voor NOT
 
 $\& = AND$
 
