--- a/Digitale Technieken 1/oef/oef.tex
+++ b/Digitale Technieken 1/oef/oef.tex
@@ -57,8 +57,13 @@ Haroen \textsc{Viaene}\\
 
 \section{Inleiding}
 
-\section{Les 1}
+De oefeninglessen zijn niet altijd even makkelijk om in te noteren in real-time, dus daarom kan het zijn dat bepaalde delen door mij niet ingevoegd worden. Volgens de normale regeling zou ik die dan wel op papier moeten hebben. Dit gebeurt echter zeker niet altijd (zoals nu al bij les 2).
 
+Het is zeker niet de bedoeling dat ik dit helemaal alleen maak, stuur als je ergens een fout ziet staan een issue of een pull request als je weet hoe hem op te lossen.
+
+Deze notities zijn open source, en de nieuwste versie is altijd te vinden op \url{https://github.com/haroenv/notes-1eoict}
+
+\section{Les 1}
 
 Talstelsels: bin - oct - hex - dec
 
@@ -69,6 +74,16 @@ $001\, 010\, 011\, 100\, 101 = 12345$
 $bin \rightarrow hex:$
 
 $0001\, 0010\, 0011\, 0100\, 0101 = 1234$
+
+\section{Les 2}
+
+\dots
+
+\newpage
+
+\section{Les 3}
+
+\dots
 
 \newpage
 
