--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -1,13 +1,16 @@
-Databases labo 3.
+Databases labo 4.
 =================
+
+Haroen Viaene
 
 1. Geef voor elke bestelling: het bestelnummer en de prijs van de duurste artikelsoort(en) die hierbij besteld werd(en).
 
 	```SQL
-	SELECT *;
+	SELECT bestelling_id
+	FROM bestellingen;
 	```
 
-1. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
+1. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
 
 1. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
