--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -6,8 +6,11 @@ Haroen Viaene
 1. Geef voor elke bestelling: het bestelnummer en de prijs van de duurste artikelsoort(en) die hierbij besteld werd(en).
 
 	```SQL
-	SELECT bestelling_id
-	FROM bestellingen;
+	SELECT bestelling.bestelling_id, MAX(prijs)
+	FROM bestellingen
+	INNER JOIN items ON items.bestelling_id = bestellingen.bestelling_id
+	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
+	GROUP BY bestellingen.bestelling_id;
 	```
 
 1. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
