--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -6,7 +6,7 @@ Haroen Viaene
 1. Geef voor elke bestelling: het bestelnummer en de prijs van de duurste artikelsoort(en) die hierbij besteld werd(en).
 
 	```SQL
-	SELECT bestelling.bestelling_id, MAX(prijs)
+	SELECT bestellingen.bestelling_id, MAX(prijs)
 	FROM bestellingen
 	INNER JOIN items ON items.bestelling_id = bestellingen.bestelling_id
 	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
@@ -14,6 +14,10 @@ Haroen Viaene
 	```
 
 1. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
+
+	```SQL
+	SELECT
+	```
 
 1. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
