--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -16,7 +16,10 @@ Haroen Viaene
 1. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
 
 	```SQL
-	SELECT
+	SELECT items.artikel_id, beschr
+	FROM items
+	INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
+	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id;
 	```
 
 1. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
