--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -31,3 +31,5 @@ Haroen Viaene
 1. Geef de ids van die bestellingen die volledig op minder dan 7 dagen tijd zijn geleverd.
 
 1. Geef het bestelnummer van alle bestellingen waarvan de (reeds uitgevoerde) levering(en) enkel op een dinsdag plaatsvonden.
+	SELECT bestelling_id FROM items 
+	WHERE DAYTIME(tijdstip)="Tuesday";
