--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -24,11 +24,23 @@ Haroen Viaene
 
 1. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
+	```SQL
+	```
+
 1. Welke artikelen komen in geen enkele bestelling voor?
+
+	```SQL
+	```
 
 1. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
 
+	```SQL
+	```
+
 1. Geef de ids van die bestellingen die volledig op minder dan 7 dagen tijd zijn geleverd.
+
+	```SQL
+	```
 
 1. Geef het bestelnummer van alle bestellingen waarvan de (reeds uitgevoerde) levering(en) enkel op een dinsdag plaatsvonden.
 
