--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -25,21 +25,25 @@ Haroen Viaene
 1. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
 	```SQL
+	SELECT;
 	```
 
 1. Welke artikelen komen in geen enkele bestelling voor?
 
 	```SQL
+	SELECT;
 	```
 
 1. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
 
 	```SQL
+	SELECT;
 	```
 
 1. Geef de ids van die bestellingen die volledig op minder dan 7 dagen tijd zijn geleverd.
 
 	```SQL
+	SELECT;
 	```
 
 1. Geef het bestelnummer van alle bestellingen waarvan de (reeds uitgevoerde) levering(en) enkel op een dinsdag plaatsvonden.
