--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -15,6 +15,8 @@ Haroen Viaene
 
 2. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
 
+	fout:
+
 	```SQL
 	SELECT items.artikel_id, beschr
 	FROM items
@@ -30,8 +32,13 @@ Haroen Viaene
 
 4. Welke artikelen komen in geen enkele bestelling voor?
 
+	fout:
+
 	```SQL
-	SELECT;
+	SELECT beschr
+	FROM items
+	INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
+	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id;
 	```
 
 5. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
