--- a/Databanken/04.md
+++ b/Databanken/04.md
@@ -5,60 +5,61 @@ Haroen Viaene
 
 1. Geef voor elke bestelling: het bestelnummer en de prijs van de duurste artikelsoort(en) die hierbij besteld werd(en).
 
-	```SQL
-	SELECT bestellingen.bestelling_id, MAX(prijs)
-	FROM bestellingen
-	INNER JOIN items ON items.bestelling_id = bestellingen.bestelling_id
-	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
-	GROUP BY bestellingen.bestelling_id;
-	```
+    ```SQL
+    SELECT bestellingen.bestelling_id, MAX(prijs)
+    FROM bestellingen
+    INNER JOIN items ON items.bestelling_id = bestellingen.bestelling_id
+    INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id
+    GROUP BY bestellingen.bestelling_id;
+    ```
 
 2. Geef het artikelnummer én de beschrijving van alle artikelen waarvan er tot nu toe reeds meer dan 4 eenheden besteld geweest zijn, en dit verspreid over minstens 2 leveringen.
 
-	fout:
+    fout:
 
-	```SQL
-	SELECT items.artikel_id, beschr
-	FROM items
-	INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
-	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id;
-	```
+    ```SQL
+    SELECT items.artikel_id, beschr
+    FROM items
+    INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
+    INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id;
+    ```
 
 3. Geef de data waarop geleverd werd bij klant(en) uit GENT (a.d.h.v meerdere geneste subqueries).
 
-	```SQL
-	SELECT;
-	```
+    ```SQL
+    SELECT;
+    ```
 
 4. Welke artikelen komen in geen enkele bestelling voor?
 
-	fout:
+    fout:
 
-	```SQL
-	SELECT beschr
-	FROM items
-	INNER JOIN bestellingen ON items.bestelling_id = bestellingen.bestelling_id
-	INNER JOIN artikelen ON artikelen.artikel_id = items.artikel_id;
-	```
+    ```SQL
+    SELECT beschr
+    FROM artikelen
+    WHERE artikel_id NOT IN (
+        SELECT artikel_id
+        FROM items);
+    ```
 
 5. Wat is de totale factuurprijs voor de levering(en) van bestellingnummer 1? (schrijf dit met een natural join)
 
-	```SQL
-	SELECT;
-	```
+    ```SQL
+    SELECT;
+    ```
 
 6. Geef de ids van die bestellingen die volledig op minder dan 7 dagen tijd zijn geleverd.
 
-	```SQL
-	SELECT bestellingen.bestelling_id
-	FROM bestellingen
-	INNER JOIN items on items.bestelling_id = bestellingen.bestelling_id
-	WHERE DATEDIFF(tijdstip,datum) < 7;
-	```
+    ```SQL
+    SELECT bestellingen.bestelling_id
+    FROM bestellingen
+    INNER JOIN items on items.bestelling_id = bestellingen.bestelling_id
+    WHERE DATEDIFF(tijdstip,datum) < 7;
+    ```
 
 7. Geef het bestelnummer van alle bestellingen waarvan de (reeds uitgevoerde) levering(en) enkel op een dinsdag plaatsvonden.
 
-	```SQL
-	SELECT bestelling_id FROM items
-	WHERE DAYTIME(tijdstip)="Tuesday";
-	```
+    ```SQL
+    SELECT bestelling_id FROM items
+    WHERE DAYTIME(tijdstip)="Tuesday";
+    ```
